cli/tests/snapshots/pipeline__wukong_pipeline_ci_status_success.snap
---
source: cli/tests/pipeline.rs
expression: "std::str::from_utf8(&output.stdout).unwrap()"
---
Current directory info
repo url: 
branch: master

CI Status:
┌────────┬──────────────┬───────────┬────────────────────────────────────────────────┬─────────────────────────┐
│ branch │ pull_request │ ci_status │ build_url                                      │ timestamp               │
├────────┼──────────────┼───────────┼────────────────────────────────────────────────┼─────────────────────────┤
│ master │ main         │ [1m[32mSUCCESS[39m[0m   │ https://ci.mv.dev/mv-platform-ci/job/main/101/ │ 2022 Sep 27 16:37:21 PM │
└────────┴──────────────┴───────────┴────────────────────────────────────────────────┴─────────────────────────┘
