cli/tests/snapshots/pipeline__wukong_pipeline_list_should_failed_when_unauthenticated.snap
---
source: cli/tests/pipeline.rs
expression: "std::str::from_utf8(&output.stderr).unwrap()"
---
[31mError[39m [38;5;244m-[39m You are un-authenticated.
[36mSuggestion[39m [38;5;244m-[39m 
	Your access token is invalid. Run "wukong login" to authenticate with your okta account.


