cli/tests/snapshots/pipeline__wukong_pipeline_list_success.snap
---
source: tests/pipeline.rs
expression: "std::str::from_utf8(&output.stdout).unwrap()"
---
Pipeline list for application valid-application:
┌────────────────────────────────────┬─────────────────────────┬─────────────────────────┬────────────────┐
│ name                               │ last_succeeded_at       │ last_failed_at          │ last_duration  │
├────────────────────────────────────┼─────────────────────────┼─────────────────────────┼────────────────┤
│ [92mmv-platform-ci[39m                     │ N/A                     │ N/A                     │ N/A            │
├────────────────────────────────────┼─────────────────────────┼─────────────────────────┼────────────────┤
│ [92mmv-platform-prod-main-branch-build[39m │ 2022 Sep 27 16:23:08 PM │ 2022 Sep 22 18:55:09 PM │ 8 mins 42 secs │
└────────────────────────────────────┴─────────────────────────┴─────────────────────────┴────────────────┘


